--- a/MemeMe 2.0/Base.lproj/LaunchScreen.storyboard
+++ b/MemeMe 2.0/Base.lproj/LaunchScreen.storyboard
@@ -17,16 +17,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="2qU-ZO-Eqt">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="X6H-K5-xnd"/>
-                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="YcA-zJ-UN6"/>
-                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vnK-BV-EuY"/>
-                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="z84-DS-pu8"/>
+                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0l0-kS-2UI"/>
+                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="O9Y-YE-39A"/>
+                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="-44" id="aye-CC-x34"/>
+                            <constraint firstItem="2qU-ZO-Eqt" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="uxr-3L-ss3"/>
                         </constraints>
                     </view>
                 </viewController>
